src/main/webapp/resources/css/main.css
/* ... */
.pointer {
    cursor: pointer;
}

.highlighted-item {
    padding-bottom: 30px !important;
    background-color: #09204c !important;
}

.legend {
    color: #0c2b65;
    border: 2px solid #0c2b65;
    padding-right: 5px;
    padding-left: 5px;
    border-radius: 5px;
    background-color: white;
    max-width: 267px;

}

.legend-small {
    /*position: absolute;
    margin-bottom: 110px;*/
    width: 267px;
    color: #0c2b65;
    border: 2px solid #0c2b65;
    padding-right: 5px;
    padding-left: 5px;
    border-radius: 5px;
    background-color: white;
}

.legend-font {
    font-size: 11px;
}

.tooltip > .tooltip-inner {
    background-color: rgba(255, 255, 255, 1);
    color: black;
    border: 1px solid rgba(6, 36, 75, 1);
    padding: 5px;
    font-size: 14px;
}

.tooltip.right > .tooltip-arrow {
    border-right: 5px solid rgba(6, 36, 75, 1);
}

.tooltip.left > .tooltip-arrow {
    border-left: 5px solid rgba(6, 36, 75, 1);
}

.tooltip.in {
    opacity: 1 !important;
}

.no-link {
    cursor: initial;
}

#tools-treeview ul li {
    cursor: default;
}

#disease-transmission-models-treeview ul li {
    cursor: default;
}

#system-software-treeview ul li {
    cursor: default;
}

.no-padding {
    padding: 0px !important;
}

.no-margin {
    margin: 0px !important;
}

.tools {
    color: #0c2b65;
    text-decoration: underline;
}

.italic {
    font-style: italic;
}

.sso-color {
    color: #d21414;
}

.udsi-color {
    color: #22a6a9;
}

label[disabled="disabled"] {
    color: #AAA;
}

.error-color {
    color: #a94442;
}

.error {
    padding-left: 20px;
}


.frame {
    display: block;
    width: 100vw;
    height: 100vh;
    max-width: 100%;
    margin: 0;
    padding: 0;
    border: 0 none;
    box-sizing: border-box;
}

.frame::-webkit-scrollbar {
    display: none;
}

/*.badge {*/
    /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
    /*display: inline-block;*/
    /*min-width: 10px;*/
    /*padding: 3px 2px;*/
    /*font-size: 12px;*/
    /*font-weight: normal;*/
    /*line-height: 1;*/
    /*color: black;*/
    /*!*#0c2b65*!*/
    /*text-align: center;*/
    /*white-space: nowrap;*/
    /*vertical-align: middle;*/
    /*background: none;*/
    /*border-radius: 10px;*/
/*}*/

.list-group-item > .badge {
    float: none;
}

.margin-bottom-30 {
    margin-bottom: 30px;
}

.hidden {
    display: none !important;
}

.visible {
    display: inline-block !important;
}

.legend-large {
    margin-bottom: 45px;
    position: fixed;
    margin-right: 10px;
    right: 15px;
    bottom: 0;
    z-index: 100;
}

#legend-button {
    position: absolute;
    right: 6px;
    top: 9px
}

.disabled {
    pointer-events: none;
    opacity: 0.4;
}

.modal-body p {
    word-wrap: break-word;
}

.text-center {
    text-align: center;
}

textarea {
    resize: vertical;
}

.panel-primary {
    border-color: #0c2b65;
}

.pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
    z-index: 0;
    color: #fff !important;
    cursor: default;
    background-color: #0c2b65;
    border-color: #0c2b65;
}

.panel-primary {
    border-color: #0c2b65 !important;
}

tfoot {
    display: none !important;
}

.page-link {
    color: #0c2b65;

}

.page-item.active .page-link {
    z-index: 1;
    color: #fff;
    background-color: #0c2b65;
    border-color: #0c2b65;
}

.data-label {
    font-style: italic;
    color: #0c2b65;
    font-size: 13px;
}

.sort-by-dropdown {
    font-size: 13px;
    padding: 0px;
    border: 0;
}

.sort-by-dropdown:after{
    top: 4px !important;
    padding: 0px !important;
}

.bootstrap-select .dropdown-toggle::after {
    right: 10px;
}

.ajax-loader {
    padding: 10px;
    text-align: center;
}

.status-modal-body {
    height: 130px;
}

.btn-publish {
    float: right;
}

.table-sm td, .table-sm th {
    font-size: 13px;
    padding: .3rem !important;
}
/*//////////////////////////*/
/*Navbar CSS*/
/*//////////////////////////*/
.no-opacity {
    opacity: 1 !important;
}
.margin-right-10 {
    margin-right: 10px;
}
.dropdown:hover>.dropdown-menu {
    transform: none !important;
}
.dropdown-submenu:hover>.dropdown-menu {
    transform: none !important;
}

.navbar-dropdown:after {
    top: -7px !important;
    padding: 2px !important;
}

.dropdown-menu .dropdown-submenu > a:after, .dropdown-menu .dropdown-submenu > button:after {
    right: 25px !important;
    top: -10px !important
}

.nav-tabs {
    border-bottom: 0px!important;
}

.nav.nav-tabs .nav-item .nav-link.active {
    border-radius: 0;
}


.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
    /*background-color: rgba(0, 0, 0, 0.25) !important;*/
    border-color: transparent;
}

.navbar-nav > .open > a, .navbar-nav > .open > a:focus, .navbar-nav > .open > a:hover {
    background-color: rgba(0, 0, 0, 0.25) !important;
    padding-bottom: 10px;
}

.bg-navbar {
    background-color: #0c2b65;
}

.navbar-brand {
    padding-top: 0px !important;
    padding-bottom: 0px !important;
}

/*.navbar-brand-mod {*/
    /*float: left !important;*/
    /*height: 80px !important;*/
    /*padding-top: 0px !important;*/
    /*padding-bottom: 0px !important;*/
    /*padding-left: 15px !important;*/
    /*padding-right: 15px !important;*/
    /*font-size: 18px !important;*/
    /*line-height: 20px !important;*/
/*}*/

.nav-link {
    margin-top: 0; !important;
    color: white !important;
    font-family: "TransportNewMedium", Helvetica, Arial, sans-serif;
    font-weight: normal;
}

.nav-link.dropdown-menu > li > a:hover, .nav-link.dropdown-menu > li > a:focus {
    background-color: rgba(0, 0, 0, 0.25);
    margin-top: 0px !important;
}

#page-title {
    margin-top: 10px;
}

#page-title-big {
    margin-top: 10px;
}
/* ... */

